# internal/app/handlers/chatRoom.go
@@ -37,10 +37,42 @@ func (handler *ChatRoomHandler) CreateRoom(w http.ResponseWriter, r *http.Reques
 	userID := claims.ID
 
 	newRoom, err := handler.chatRoomService.Create(r.Context(), &dto.NewRoomDTO{
-		AdminID: uint(userID),
+		AdminID:   uint(userID),
+		MemberIDs: room.MemberIDs,
 		CreateRoomRequest: dto.CreateRoomRequest{
 			Name: room.Name,
 		},
+	})
+	if err != nil {
+		slog.Error(err.Error())
+		http.Error(w, "Failed to create chat", http.StatusInternalServerError)
+		return
+	}
+
+	w.WriteHeader(http.StatusCreated)
+	json.NewEncoder(w).Encode(newRoom)
+}
+
+func (handler *ChatRoomHandler) DirectMessage(w http.ResponseWriter, r *http.Request) {
+	var room types.CreateDirectRoomRequest
+	if err := json.NewDecoder(r.Body).Decode(&room); err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+	jwtClaims := r.Context().Value(middlewares.JWTClaimsKey)
+
+	claims, ok := jwtClaims.(*services.CustomClaims)
+	if !ok {
+		slog.Error("Invalid JWT claims type")
+		http.Error(w, "unauthorized", http.StatusUnauthorized)
+		return
+	}
+	adminID := claims.ID
+	members := []int64{room.UserID}
+
+	newRoom, err := handler.chatRoomService.Create(r.Context(), &dto.NewRoomDTO{
+		AdminID:   uint(adminID),
+		MemberIDs: &members,
 	})
 	if err != nil {
 		slog.Error(err.Error())
